[package]
name = "git-hive-protocol"
description = """
A simple library for managing a custom Block Exchange Protocol (BEP).
This BEP manages git repository data and ensures synchronization across peers.
"""
license = "WTFPL"
documentation = "http://docs.githive.io"
version = "0.2.3"
authors = [
	"Matthew Hardwick <MatthewRHardwick@gmail.com>",
]

[dependencies]
time = "0.1.32"
rmp = "0.5.1"
byteorder = "0.3.11"
